--- a/sticky_notes.safariextension/safari/global.html
+++ b/sticky_notes.safariextension/safari/global.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script data-main="global.js" src="../shared/lib/require.js"></script>
+<script type="text/javascript" src="../shared/lib/jquery-1.11.1.js"></script>
+<script type="text/javascript" src="../shared/lib/underscore.js"></script>
+<script type="text/javascript" src="../shared/lib/underscore.string.js"></script>
+<script type="text/javascript" src="../shared/lib/haml.js"></script>
+<script type="text/javascript" src="safari_browser_adapter.js"></script>
+<script type="text/javascript" src="../shared/js/background.js"></script>
+<script type="text/javascript" src="global.js"></script>
 </head>
 </html>
