--- a/sticky_notes.safariextension/safari/global.html
+++ b/sticky_notes.safariextension/safari/global.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script type="text/javascript" src="../shared/lib/jquery-1.11.1.js"></script>
-<script type="text/javascript" src="../shared/lib/underscore.js"></script>
-<script type="text/javascript" src="../shared/lib/underscore.string.js"></script>
-<script type="text/javascript" src="../shared/lib/haml.js"></script>
-<script type="text/javascript" src="safari_browser_adapter.js"></script>
-<script type="text/javascript" src="../shared/js/background.js"></script>
-<script type="text/javascript" src="global.js"></script>
+<script type="text/javascript" src="../shared/background.js"></script>
+<script type="text/javascript" src="main.js"></script>
 </head>
 </html>
